# scel_transform

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp  scel_transformer.cpp  scel_transformer.hpp  value.hpp
